--- a/css/main.scss
+++ b/css/main.scss
@@ -1,3 +1,60 @@
-img {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+
+body {
+    margin: 1.5em;
+    font-family: 'Poppins', sans-serif;
+    
+}
+
+a {
+    text-decoration: none;
+    font-size: 1.3rem;
+}
+
+.hero-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: url('../images/chuck4.jpg');
+    background-size: cover;
+    background-position-x: 20%;
+    background-position-y: 20%;
     width: 100%;
+    height: 100vh;
+    z-index: -1;
+    //overflow: hidden;
+}
+
+.logo {
+    color: white;
+    font-weight: bold;
+
+}
+
+nav {
+    display: none;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+
+    svg {
+        width: 3em;
+        margin-top: -.6em;
+        cursor: pointer;
+    }
+}
+
+section.hero {
+    color: white;
+    height: 90vh;
+
+    svg {
+        stroke: white;
+        
+        path {
+            fill: white;
+        }
+    }
 }
