--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
 body {
+  background: black;
   margin: 1.5em;
   font-family: "Poppins", sans-serif;
 }
@@ -23,12 +24,39 @@ a {
 }
 
 .logo {
-  color: white;
+  color: black;
   font-weight: bold;
 }
 
 nav {
-  display: none;
+  position: fixed;
+  right: 0;
+  top: 0;
+  background: white;
+  height: 100vh;
+  width: 50%;
+  z-index: 2;
+  text-transform: uppercase;
+  transform: translatex(100%);
+  transition: transform 0.5s ease-in-out;
+}
+nav ul {
+  list-style-type: none;
+  padding: 0;
+  margin-top: 8em;
+}
+nav ul a {
+  color: black;
+  padding: 0.75em 2em;
+  display: block;
+}
+nav ul a:hover {
+  background: rgb(235, 235, 235);
+}
+nav .close {
+  float: right;
+  margin: 2em;
+  width: 2.5em;
 }
 
 header {
@@ -41,13 +69,33 @@ header svg {
   cursor: pointer;
 }
 
+h1 {
+  font-size: 3rem;
+  margin-top: 2em;
+  line-height: 3.3rem;
+}
+
+.subhead {
+  font-size: 1.4rem;
+}
+
 section.hero {
-  color: white;
+  color: black;
   height: 90vh;
 }
-section.hero svg {
-  stroke: white;
+section.hero .down-arrow {
+  stroke: black;
+  position: absolute;
+  bottom: 2em;
+  width: 1em;
 }
-section.hero svg path {
+section.hero .down-arrow path {
   fill: white;
+}
+
+.more-info img {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 11em;
 }/*# sourceMappingURL=main.css.map */
