finish mobile css design layout

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
 body {
-  background: black;
   margin: 1.5em;
   font-family: "Poppins", sans-serif;
 }
@@ -81,6 +80,7 @@ h1 {
 
 section.hero {
   color: black;
+  text-shadow: 2px 2px white;
   height: 90vh;
 }
 section.hero .down-arrow {
@@ -98,4 +98,11 @@ section.hero .down-arrow path {
   -o-object-fit: cover;
      object-fit: cover;
   height: 11em;
+}
+.more-info .titles {
+  font-weight: bold;
+  font-size: 1.25rem;
+}
+.more-info .desc {
+  line-height: 1.5rem;
 }/*# sourceMappingURL=main.css.map */
