--- a/css/main.css
+++ b/css/main.css
@@ -105,4 +105,24 @@ section.hero .down-arrow path {
 }
 .more-info .desc {
   line-height: 1.5rem;
+}
+
+@media only screen and (min-width: 680px) {
+  body {
+    margin: 1.5em 5em;
+  }
+}
+@media only screen and (min-width: 920px) {
+  .menu {
+    display: none;
+  }
+
+  nav {
+    transform: translate(0);
+    position: unset;
+    display: block;
+    width: auto;
+    height: auto;
+    background: none;
+  }
 }/*# sourceMappingURL=main.css.map */
