--- a/css/main.scss
+++ b/css/main.scss
@@ -123,3 +123,25 @@ section.hero {
         line-height: 1.5rem;
     }
 }
+
+@media only screen and (min-width: 680px) {
+    body {
+        margin: 1.5em 5em;
+        
+    }
+}
+@media only screen and (min-width: 920px) {
+    .menu {
+        display: none;
+    }
+
+    nav {
+        transform: translate(0);
+        position: unset;
+        display: block;
+        width: auto;
+        height: auto;
+        background: none;
+    }
+}
+
