--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ a {
   position: absolute;
   top: 0;
   left: 0;
-  background: url("../images/chuck4.jpg");
+  background: url("../images/chuck1.jpg");
   background-size: cover;
   background-position-x: 20%;
   background-position-y: 20%;
@@ -45,7 +45,7 @@ nav ul {
   margin-top: 8em;
 }
 nav ul a {
-  color: black;
+  color: white;
   padding: 0.75em 2em;
   display: block;
 }
@@ -79,8 +79,8 @@ h1 {
 }
 
 section.hero {
-  color: black;
-  text-shadow: 2px 2px white;
+  color: white;
+  text-shadow: 1px 1px black;
   height: 90vh;
 }
 section.hero .down-arrow {
@@ -113,10 +113,6 @@ section.hero .down-arrow path {
   }
 }
 @media only screen and (min-width: 920px) {
-  .menu {
-    display: none;
-  }
-
   nav {
     transform: translate(0);
     position: unset;
@@ -124,5 +120,90 @@ section.hero .down-arrow path {
     width: auto;
     height: auto;
     background: none;
+    text-shadow: 1px 1px white;
+  }
+  nav svg.close {
+    display: none;
+  }
+  nav ul {
+    display: flex;
+    margin: 0;
+  }
+  nav ul a {
+    color: black;
+    padding: 0.5em 1.5em;
+    font-size: 1rem;
+  }
+  nav ul a:hover {
+    background: none;
+    text-decoration: underline;
+  }
+
+  .menu {
+    display: none;
+  }
+
+  .hero-img {
+    left: unset;
+    right: 0;
+    width: 50%;
+    height: 42em;
+  }
+
+  .logo {
+    color: black;
+  }
+  .logo span {
+    color: red;
+  }
+
+  section.hero {
+    color: black;
+    height: auto;
+    width: 40%;
+    margin-bottom: 8em;
+  }
+  section.hero svg.down-arrow {
+    stroke: black;
+    position: unset;
+  }
+  section.hero svg.down-arrow path {
+    fill: black;
+  }
+
+  .feature {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    gap: 3em;
+    margin-bottom: 8em;
+  }
+  .feature img {
+    width: 25em;
+  }
+  .feature .content {
+    text-align: right;
+    width: 25em;
+  }
+
+  .feature.left {
+    grid-template-areas: "left right";
+  }
+  .feature.left img {
+    grid-area: left;
+  }
+  .feature.left .content {
+    text-align: left;
+    width: 25m;
+    justify-self: 25em;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .wrapper {
+    width: 1200px;
+    margin: 0 auto;
+  }
+
+  .feature {
+    gap: 0;
   }
 }/*# sourceMappingURL=main.css.map */
