--- a/css/main.scss
+++ b/css/main.scss
@@ -16,7 +16,7 @@ a {
     position: absolute;
     top: 0;
     left: 0;
-    background: url('../images/chuck4.jpg');
+    background: url('../images/chuck1.jpg');
     background-size: cover;
     background-position-x: 20%;
     background-position-y: 20%;
@@ -50,7 +50,7 @@ nav {
         margin-top: 8em;
 
         a {
-            color: black;
+            color: white;
             padding: .75em 2em;
             display: block;
             
@@ -91,8 +91,8 @@ h1 {
 }
 
 section.hero {
-    color: black;
-    text-shadow: 2px 2px white;
+    color: white;
+    text-shadow: 1px 1px black;
     height: 90vh;
 
     .down-arrow {
@@ -131,9 +131,7 @@ section.hero {
     }
 }
 @media only screen and (min-width: 920px) {
-    .menu {
-        display: none;
-    }
+    
 
     nav {
         transform: translate(0);
@@ -142,6 +140,110 @@ section.hero {
         width: auto;
         height: auto;
         background: none;
+        
+        text-shadow: 1px 1px white;
+
+        svg.close {
+            display: none;
+        }
+
+        ul {
+            display: flex;
+            margin: 0;
+
+            a {
+                color: black;
+                padding: .5em 1.5em;
+                font-size: 1rem;
+
+                &:hover {
+                    background: none;
+                    text-decoration: underline;
+                }
+            }
+        }    
+    }
+
+    .menu {
+        display: none;
+    }
+
+    .hero-img {
+        left: unset;
+        right: 0;
+        width: 50%;
+        height: 42em;
+    }
+
+    .logo {
+        color: black;
+        
+        span {
+            color: red;
+        }
+    }
+
+    section.hero {
+        color: black;
+        height: auto;
+        width: 40%;
+        margin-bottom: 8em;
+
+        svg.down-arrow {
+            stroke: black;
+            position: unset;
+
+            path {
+                fill: black;
+            }
+        }
+
+    }
+
+    .feature {
+        display: grid;
+        grid-template-columns: repeat(2, auto);
+        gap: 3em;
+        margin-bottom: 8em;
+
+        img {
+            width: 25em;
+        }
+
+        .content {
+            text-align: right;
+            width: 25em;
+        }
+
+
+
+    }
+    
+    .feature.left {
+        grid-template-areas: "left right";
+
+        img {
+            grid-area: left;
+        }
+
+        .content {
+            text-align: left;
+            width: 25m;
+            justify-self: 25em;
+        }
     }
 }
+
+@media only screen and (min-width: 1200px) {
+    .wrapper {
+        width: 1200px;
+        margin: 0 auto;
+
+    }
+
+    .feature {
+        gap: 0;
+    }
+}
+
 
