included animations declarations

--- a/css/main.css
+++ b/css/main.css
@@ -84,6 +84,9 @@ section.hero {
   color: white;
   text-shadow: 1px 1px black;
   height: 90vh;
+  -webkit-animation: moveDown 1s ease-in-out forwards;
+          animation: moveDown 1s ease-in-out forwards;
+  opacity: 0;
 }
 section.hero .down-arrow {
   stroke: white;
@@ -245,5 +248,23 @@ section.hero .down-arrow path {
   }
   to {
     transform: translateY(0);
+  }
+}
+@-webkit-keyframes moveDown {
+  from {
+    transform: translateY(-100px);
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+@keyframes moveDown {
+  from {
+    transform: translateY(-100px);
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
   }
 }/*# sourceMappingURL=main.css.map */
