added animation for the combo menu

--- a/css/main.css
+++ b/css/main.css
@@ -47,7 +47,7 @@ nav ul {
   margin-top: 8em;
 }
 nav ul a {
-  color: white;
+  color: black;
   padding: 0.75em 2em;
   display: block;
 }
@@ -55,6 +55,9 @@ nav ul a:hover {
   background: rgb(235, 235, 235);
 }
 nav .close {
+  position: absolute;
+  top: 0;
+  right: 0;
   float: right;
   margin: 2em;
   width: 2.5em;
@@ -112,6 +115,10 @@ section.hero .down-arrow path {
 }
 .more-info .desc {
   line-height: 1.5rem;
+}
+
+.open-nav {
+  transform: translateX(0);
 }
 
 @media only screen and (min-width: 680px) {
